# haikulang

./: Cargo.toml  README.md
.github/workflows/: test.yml
haikulang_cli/: Cargo.toml  test-error.hkl  test.hkl
haikulang_cli/src/: error_reporting.rs  lexer_cmd.rs  llvm_cmd.rs  main.rs  parser_cmd.rs
haikulang_compiler/: Cargo.toml  README.md
haikulang_compiler/src/hir/: arena.rs  context.rs  lowerer.rs  mod.rs  nodes.rs  sym.rs
haikulang_lexer/: Cargo.toml
haikulang_lexer/src/: err.rs  lexer.rs  lib.rs  location.rs  string_lexer.rs  token.rs
haikulang_llvm/: Cargo.toml  README.md  build.rs
haikulang_llvm/src/: codegen.rs
haikulang_parser/: Cargo.toml
haikulang_parser/src/: ast.rs  err.rs  error.rs  lexer.rs  lib.rs  location.rs  mock_lexer.rs  parser.rs  span.rs  token.rs
haikulang_parser/src/ast/: expr.rs  func.rs  ident.rs  mod.rs  node.rs  pretty.rs  stmt.rs  structs.rs  unit.rs  visitor.rs
haikulang_parser/src/lexer/: basic_lexer.rs  err.rs  error.rs  helpers.rs  lexer.rs  literals.rs  location.rs  mock_lexer.rs  mod.rs  token.rs  token_stream.rs
haikulang_parser/src/parser/: ast.rs  basic_parser.rs  core.rs  err.rs  error.rs  expr.rs  func.rs  ident.rs  mod.rs  parser.rs  stmt.rs  structs.rs  unit.rs
scripts/: fetch-llvm.sh
