[workspace]
members = [
    "haikulang_cli",
    "haikulang_parser",
]
resolver = "3"

[workspace.dependencies]
ariadne = "0.6.0"
logos = "0.16.1"
test-case = "3.3.1"

[workspace.package]
authors = ["Ashley Scopes <73482956+ascopes@users.noreply.github.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ascopes/haikulang"
version = "0.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"
