[workspace]
members = [
    "haikulang_cli",
    "haikulang_compiler",
    "haikulang_parser",
]
resolver = "3"

[workspace.dependencies]
ariadne = "0.6.0"     # Pretty error messages referencing source code
clap = "4.5.60"       # Command line parsing
inkwell = "0.8.0"     # LLVM bindings
la-arena = "0.3.1"    # Type arena implementation
logos = "0.16.1"      # Lexer generation
test-case = "3.3.1"   # Parameterized tests

[workspace.package]
authors = ["Ashley Scopes <73482956+ascopes@users.noreply.github.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ascopes/haikulang"
version = "0.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"
