[package]
name = "haikulang_cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ariadne = { workspace = true, features = ["auto-color"] }
clap = { features = ["derive"], workspace = true }
haikulang_llvm = { path = "../haikulang_llvm" }
haikulang_parser = { path = "../haikulang_parser" }

[lints]
workspace = true
