[package]
name = "haikulang_llvm"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
haikulang_parser = { path = "../haikulang_parser" }
inkwell = { features = ["llvm21-1-force-dynamic"], workspace = true }

[dev-dependencies]
test-case.workspace = true

[lib]

[lints]
workspace = true
