[package]
name = "haikulang_parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
haikulang_lexer = { path = "../haikulang_lexer" }

[dev-dependencies]
test-case.workspace = true

[lib]

[lints]
workspace = true
