[package]
name = "haikulang_parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chumsky.workspace = true
logos = { features = ["debug"], workspace = true }

[dev-dependencies]
test-case.workspace = true

[lib]

[lints]
workspace = true
